# task_gohar

./: README.md  pyproject.toml
configs/logging/: logging.toml
database/: collections.py  core.py
docs/: settings_template.toml
kernel/: application.py
kernel/settings/: __init__.py  base.py  database.py  logging.py
users/api/v1/: routes.py  schemas.py
users/helpers/: __init__.py  enums.py
users/models/: team.py  user.py
utils/: __init__.py
utils/designs/: singleton.py
