[tool.poetry]
name = "task-gohar"
version = "0.1.0"
description = ""
authors = ["soheil alimadadi <soheilblizzard@gmail.com>"]
readme = "README.md"
packages = [{include = "task_gohar"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
