[tool.poetry]
name = "task-gohar"
version = "0.1.0"
description = ""
authors = ["soheil alimadadi <soheilblizzard@gmail.com>"]
readme = "README.md"
packages = [{include = "task_gohar"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
motor = "^3.2.0"
uvicorn = "^0.23.2"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
